--- a/Game/Game/Game.csproj
+++ b/Game/Game/Game.csproj
@@ -263,7 +263,7 @@
     <Resource Include="PropIcons\Ghost\Up\Up.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="View\Images\Player_House_Part1.png" />
+    <Resource Include="View\Images\Player_House_Part1.png" />
     <Resource Include="View\Images\Player_House_Part2.png" />
   </ItemGroup>
   <ItemGroup>
